сделал 4-ю лабу по ЗИ

--- a/info_sec/labs/lab_04/report/04-analysis.tex
+++ b/info_sec/labs/lab_04/report/04-analysis.tex
@@ -1,116 +1,90 @@
-\chapter{Аналитический раздел}
+\chapter{Аналитическая часть}
 
-В этом разделе будет рассмотрен шифровальный алгоритм AES в режиме шифрования CFB.
+В этом разделе будут рассмотрен криптографический алгоритм RSA, алгоритм хеширования SHA1 понятие электронной подписи и принципы её получения и проверки с использованием алгоритмов RSA, SHA1.
 
-\section{Алгоритм AES}
+\section{Электронная цифровая подпись}
 
-Шифровальная алгоритм AES (англ. \textit{Advanced Encryption Standart} --- AES) --- симметричный блочнный шифровальный алгоритм, разработанный в 2001 году Национальный институтом стандартов и технологий США. Он использует блочное шифрование, длина блока фиксирована и равна 128 битам, длина ключа 128, 192 либо же 256 бит. Он состоит раундов шифрования,количество которых зависит от длины ключа: 10 раундов для ключа размером 128 бит, 12 раундов для ключа размером 192 бита и 14 раундов для ключа размером 256 бит.
+Электронная цифровая подпись (ЭЦП) позволяет подтвердить авторство электронного документа.
 
-Прежде чем перейти к раундам шифрования, происходит генерация ключей раунда (раундовых ключей) из исходного ключа, Рассмотрим, как это происходит.
-
-\subsection{Получение ключей раунда}
-
-Определим фунцию $g$, изменяющую четырёхбайтовое слово так, как указано на рисунке \ref{img:g_function}.
-
-Ключей раундов $k_{i}$ необходимо на 1 больше, чем количество раундов, т.е. 11 ключей раундов для основногоключа длиной 128 бит, 13 ключей раунда для основного ключа длиной 192 бита и 15 ключей раунда для основного ключа длинной 256 бит.
-
-\clearpage
-
-\includeimage
-{g_function} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.6\textwidth} % Ширина рисунка
-{Схема функции g} % Подпись рисунка
-
-%\begin{figure}[ht!]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{img/g_function.png}
-%	\caption{Схема функции g}
-%	\label{img:g_function}
-%\end{figure}
-
-\clearpage
-
-Алгоритм получения ключа раунда из исходного ключа преставлен в виде схемы алгоритма на рисунке \ref{img:round_keys}.
-
-\includeimage
-{round_keys} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.6\textwidth} % Ширина рисунка
-{Схема алгоритма получения ключей раунда} % Подпись рисунка
-
-%\begin{figure}[ht!]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{img/round_keys.png}
-%	\caption{Схема функции g}
-%	\label{img:round_keys}
-%\end{figure}
-
-\subsection{Раунд шифрования}
-
-Раунд шифрования состоит из 5 следующих этапов
+Создание ЭЦП с использованием криптографического алгоритма RSA и алгоритма хеширования SHA1 происходит следующим образом:
 \begin{enumerate}[label=\arabic*)]
-	\item замена (англ. \textit{confussion});
-	\item процедура перестановки строк (англ. \textit{row-row mix procedure} --- RR);
-	\item процедура перестановки столбцов (англ. \textit{row-columns mix} --- RC);
-	\item смешивание ключа (англ. \textit{key mixing} --- KM).
+	\item файл, который необходимо подписать, хешируется  при помощи SHA1;
+	\item полученный на предыдущем этапе хеш шифруется с использованием закрытого ключа RSA;
+	\item значение подписи --- результат шифрования.
 \end{enumerate}
 
-Замена обеспечивает нелинейность алгоритма шифрования, обрабатываая каждый байт состояния, производя нелинейную замену байт с использованием таблицы замен.
+Проверка подлинности ЭЦП с использованием криптографического алгоритма RSA и алгоритма хеширования SHA1 происходит следующим образом:
 
-Процедура перестановки строк представляет из себя циклический сдвиг строки состояний на количество байт, зависящее от номера строки.
-
-Процедура перестановки столбцов 4 байта каждого столбца смешиваются с использовоанием обратимой линейной трансформации. На последнем раунду эта процедура не выполняется.
-
-Смешивание ключа представляет из себя операцию XOR с ключом раунда, полученным заранее.
-
-\section{Режимы работы алгоритма AES}
-
-Режим шифрования --- метод применения блочного шифра, позволяющий преобразовать последовательность блоков открытых данных в последовательность блоков зашифрованных данных.
-
-Для AES рекомендованы следующие режими работы:
 \begin{enumerate}[label=\arabic*)]
-	\item режим электронной кодовой книги (англ. \textit{Electronic Code Bloc} --- ECB);
-	\item режим сцепления блоков (англ. \textit{Cipher Block Chaining} -- CBC);
-	\item режим параллельноого сцепления блоков (англ. \textit{Parallel Cipher Block Chaining} -- PCBC);
-	\item режим обратной связи по шифротексту (англ. \textit{Cipher Feed Back} --- CFB);
-	\item режим обратной связи по выходу (англ. \textit{Output Feed Back} --- OFB).
+	\item файл, который необходимо подписать, хешируется  при помощи SHA1;
+	\item переданная подпись расшифровывается с использованием открытого ключа RSA;
+	\item происходит побитовая сверка значений, полученных на предыдущих этапах, если они одинаковы, подпись считается подлинной.
 \end{enumerate}
 
-\section{Режимы работы алгоритма CFB}
+\section{Алгоритм RSA}
 
-Алгоритм CFB схематично представлен на рисунке \ref{img:cfb}.
-Суть алгоритма заключается в том, что изначально берется блок из 128 битов $C_0$, который называется синхропосылкой. 
-Вектор инициализации (или результаты прошлого XOR) шифруется алгоритмом AES или DES (в нашем случае AES). 
-Затем результат суммируется по модулю 2 с блоком \(C_0\) и при этом результат используется для шифрования следующего блока.
-Таким образом каждый блок суммируется с результатом шифрования предыдущего блока.
+RSA (аббревиатура от фамилий \textit{Rivest}, \textit{Shamir} и \textit{Adleman}) --- ассиметричный алгоритм с открытым ключом, основывающийся на вычислительной сложности задачи факторизации больших полупростых чисел. В алгоритме RSA используется 2 ключа --- открытый (публичный) и закрытый (приватный).
 
-Особенностью данного режима является распространение ошибки на всесь последующий текст.
-Применяется как правило для шифрования потков информации видео и аудио.
+В ассиметричной криптографии и алгоритме RSA, в частности, открытый и закрытый ключи являются двумя частями одного целого и неразрывны друг с другом. Для шифрования информации используется открытый ключ, а для её расшифровки закрытый.
+
+Криптосистема RSA стала первой системой, пригодной и для шифрования, и для цифровой подписи.
+
+Открытый и закрытый ключи RSA генерируются следующим образом:
+
+\begin{enumerate}[label=\arabic*)]
+	\item выбираются два разных случайных простых числа $p$ и $q$ заданного размера;
+	\item вычисляется их произведение $n = p \cdot q$, называемое модулем;
+	\item вычисляется значение функции Эйлера от числа $n$ по следующей формуле:
+	
+	$$\phi(n) = (p - 1)\cdot (q - 1)$$
+	
+	\item выбирается целое число $e$ ($1 < e < \phi(n)$), взаимно простое со значением $\phi(n)$, называемое \textit{открытой экспонентой};
+	
+	\item вычисляется число $d$, называемое \textit{закрытой экспонентой} по следующей формуле:
+	
+	$$d  = e^{-1} mod (\phi(n))$$
+	
+	\item пара $(e, n)$ публикуются в качестве открытого ключа RSA;
+	\item пара $(d, n)$  представляет собой закрытый ключ RSA.
+\end{enumerate}
+
+Перевод исходного сообщения $m$ в зашифрованное сообщение $c$ производится по формуле
+
+ $$c = E(m, k_1) = E(m, n, e) = m^{e} mod (n)$$
+
+Расшифровка выполняется по формуле
+
+$$m = D(c, k_2) = D(c, n, d) = c^{d} mod (n)$$
 
 \includeimage
-{cfb} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.9\textwidth} % Ширина рисунка
-{Обобщенная схема алгоритма режима шифрования СFB} % Подпись рисунка
+{rsa}
+{f}
+{ht!} 
+{0.8\textwidth}
+{RSA}
 
-%\begin{figure}[ht!]
-%	\centering
-%	\includegraphics[width=0.9\linewidth]{img/cfb.png}
-%	\caption{Обобщенная схема алгоритма режима шифрования СFB}
-%	\label{fig:cfb}
-%\end{figure}
+\section{Алгоритм SHA1}
 
-%\includeimage
-%{PCBC} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-%{f} % Обтекание (без обтекания)
-%{H} % Положение рисунка (см. figure из пакета float)
-%{0.8\textwidth} % Ширина рисунка
-%{Схема режима шифрования PCBC} % Подпись рисунка
+SHA1 (англ. \textit{Secure Hash Algorithm 1}) --- алгоритм криптографического хеширования. 
+Для входного сообщения произвольной длины алгоритм генерирует 160-битное (20 байт) хеш-значение, называемое также дайджестом сообщения, которое обычно отображается как шестнадцатеричное число длиной в 40 цифр.
 
-\section*{Вывод}
+Алгоритм состоит из следующих шагов:
 
-В этом разделе был рассмотрен шифровальный алгоритм AES в режиме шифрования CFB.
+\begin{enumerate}
+	\item \textbf{добавление недостающих битов}. Сообщение расширяется таким образом, чтобы его длина была кратна 448 по модулю 512 (длина $\equiv  448 \mod 512$). Добавление осуществляется всегда, даже если сообщение уже имеет нужную длину. Таким образом, число добавляемых битов находится в диапазоне от 1 до 512;
+	\item \textbf{расширение.} Результатом первых двух шагов является сообщение, длина которого кратна 512 битам. Расширенное сообщение может быть представлено как последовательность 512-битных блоков $Y_0, Y_1, . . . , Y_{L-1}$, так что общая длина расширенного сообщения есть $L * 512$ бит. Таким образом, результат кратен шестнадцати 32-битным словам.
+	\item \textbf{инициализация SHA-1 буфера.} Используется 160-битный буфер для хранения промежуточных и окончательных результатов хэш-функции. Буфер может быть представлен как пять 32-битных регистров A, B, C, D и E. Эти регистры инициализируются следующими шестнадцатеричными числами: A = 67452301, B = EFCDAB89, C = 98BADCFE, D = 10325476, E = C3D2E1F0.
+	\item \textbf{обработка сообщения в 512-битных (16-словных) блоках.} Основой алгоритма является модуль, состоящий из 80 циклических обработок, обозначенный как $H_{SHA}$. Все 80 циклических обработок имеют одинаковую структуру.
+	\item \textbf{выход.} После обработки всех 512-битных блоков выходом L-ой стадии является 160-битный дайджест сообщения.
+\end{enumerate}
+
+\includesvgimage
+{SHA-1}
+{f}
+{ht!} 
+{0.6\textwidth}
+{Одна итерация алгоритма SHA-1}
+
+\section*{Вывод} 
+
+В этом разделе был рассмотрен криптографический алгоритм RSA, алгоритм хеширования SHA1 понятие электронной подписи и принципы её получения и проверки с использованием алгоритмов RSA, SHA1.
