--- a/info_sec/labs/lab_04/report/05-design.tex
+++ b/info_sec/labs/lab_04/report/05-design.tex
@@ -1,24 +1,39 @@
 \chapter{Конструкторский раздел}
 
-На рисунках \ref{img:aes} представлены схемы алгоритма AES, раунда AES.
+На рисунках \ref{img:rsa-}-\ref{img:sha1-iter} представлены схемы алгоритма RSA и SHA1.
 
 \includeimage
-{aes} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{rsa-} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
 {f} % Обтекание (без обтекания)
 {ht!} % Положение рисунка (см. figure из пакета float)
-{0.6\textwidth} % Ширина рисунка
-{Схема шифровального алгоритма AES} % Подпись рисунка
+{0.8\textwidth} % Ширина рисунка
+{Схема шифровального алгоритма RSA} % Подпись рисунка
 
-%\begin{figure}[ht!]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{img/aes.png}
-%	\caption{Схема шифровального алгоритма AES}
-%	\label{img:aes}
-%\end{figure}
+\includeimage
+{rsa-work.png} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{f} % Обтекание (без обтекания)
+{ht!} % Положение рисунка (см. figure из пакета float)
+{0.7\textwidth} % Ширина рисунка
+{Схема шифровального алгоритма работы RSA} % Подпись рисунка
+
+\includeimage
+{sha-1.png} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{f} % Обтекание (без обтекания)
+{ht!} % Положение рисунка (см. figure из пакета float)
+{0.8\textwidth} % Ширина рисунка
+{Схема алгоритма SHA1} % Подпись рисунка
+
+\includeimage
+{sha1-iter.png} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{f} % Обтекание (без обтекания)
+{ht!} % Положение рисунка (см. figure из пакета float)
+{0.8\textwidth} % Ширина рисунка
+{Схема раунда алгоритма SHA1} % Подпись рисунка
 
 \section*{Вывод}
 
-В этом разделе была представлена схема алгоритма шифрования AES.
+В данном разделе были представлены схемы алгоритма RSA и SHA1.
+
 
 
 
