--- a/info_sec/labs/lab_04/report/06-implementation.tex
+++ b/info_sec/labs/lab_04/report/06-implementation.tex
@@ -7,7 +7,7 @@
 К программе предъявляется ряд требований:
 
 \begin{itemize} [label=--]
-	\item программа должна предоставлять возможность шифрования и расшифровки произвольного файла, а также текстового сообщения;
+	\item программа должна предоставлять возможность шифрования и расшифровки произвольного файла;
 	\item программа должна корректно работать с пустым однобайтовым файлом;
 	\item программа должна уметь обрабатывать файл архива.
 \end{itemize}
@@ -22,140 +22,63 @@
 
 \begin{itemize}
 	\item \texttt{main.cpp} --- файл, содержащий точку входа в программу;
-	\item \texttt{AES.cpp} --- модуль, реализующий алгоритм AES;
-	\item \texttt{CFB.cpp} --- модуль, реализующий шифрование в режиме CFB.
+	\item \texttt{SHA1.cpp} --- модуль, реализующий алгоритм SHA1;
+	\item \texttt{RSA.cpp} --- модуль, реализующий алгоритм RSA.
 \end{itemize}
 
 \section{Тестирование}
 
-\begin{table}[H]
-	\begin{center}
-		\begin{threeparttable}
-			\caption{Функциональные тесты}
-			\label{tbl:cmpResponseTimeByRequests_s_withoutCache}
-			\begin{tabular}{|r|r|}
-				\hline
-				\bfseries \makecell{Входная строка} & \bfseries \makecell{Шифрованная строка}\\
-				\hline
-				Hello & g▓ùδÄ☺v┼  \\ 
-				\hline
-				g▓ùδÄ☺v┼  & Hello  \\ 
-				\hline
-				B & h∩▐í'(Ñ!  \\ 
-				\hline
-				h∩▐í'(Ñ! & B  \\ 
-				\hline
-			\end{tabular}
-		\end{threeparttable}
-	\end{center}
-\end{table}
+%\begin{table}[H]
+%	\begin{center}
+%		\begin{threeparttable}
+%			\caption{Функциональные тесты}
+%			\label{tbl:cmpResponseTimeByRequests_s_withoutCache}
+%			\begin{tabular}{|r|r|}
+%				\hline
+%				\bfseries \makecell{Входная строка} & \bfseries \makecell{Шифрованная строка}\\
+%				\hline
+%				Hello & g▓ùδÄ☺v┼  \\ 
+%				\hline
+%				g▓ùδÄ☺v┼  & Hello  \\ 
+%				\hline
+%				B & h∩▐í'(Ñ!  \\ 
+%				\hline
+%				h∩▐í'(Ñ! & B  \\ 
+%				\hline
+%			\end{tabular}
+%		\end{threeparttable}
+%	\end{center}
+%\end{table}
 
-Все тесты были успешно пройдены. Тесты с файлами были также успешно пройдены.
+Все тесты с файлами были успешно пройдены.
 
 \section{Реализации алгоритмов}
 
-На листинге \ref{lst:aes.txt} представлена функция, реализующая алгоритм AES.
+На листинге \ref{lst:rsa-gen-keys.txt} представлена функция, реализующая реализующая генерацию публичного и приватного RSA-ключа.
 
-На листинге \ref{lst:key-expansion.txt} представлена функция, реализующая генерацию ключей для каждого раунда шифрования.
+На листинге \ref{lst:rsa-functions.txt} представлены функции создания подписи, создания прототипа сообщения и проверки подписи.
 
-На листинге \ref{lst:add-round-key.txt}  представлена функция, реализующая добавление ключа раунда к state.
+На листингах \ref{lst:sha1-part1.txt}-\ref{lst:sha1-part2.txt} представлена функция хеширования алгоритмом SHA1.
 
-На листинге \ref{lst:sub-bytes.txt}  представлена функция, реализующая нелинейную замену байт в state с помощью sbox.
-
-На листинге \ref{lst:shift-rows.txt}  представлена функция, реализующая циклический сдвиг строк state влево в зависимости от номера строк.
-
-На листинге \ref{lst:mix-columns.txt}  представлена функция, реализующая процедуру MixColumns.
-
-%На листингах \ref{lst:f_part1.txt} и \ref{lst:f_part2.txt} представлена реализация функции Фейстеля.
-%
-%На листинге \ref{lst:pcbc.txt}  представлена реализация шифрования в режиме PCBC.
-%
 \includelisting
-{aes.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая алгоритм AES} % Подпись листинга
+{rsa-gen-keys.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая генерацию публичного и приватного RSA-ключа} % Подпись листинга
+
+\clearpage 
+
+\includelisting
+{rsa-functions.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функции создания подписи, создания прототипа сообщения и проверки подписи} % Подпись листинга
 
 \clearpage
 
 \includelisting
-{key-expansion.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая генерацию ключей раундов} % Подпись листинга
+{sha1-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функции хеширования алгоритмом SHA1 (начало)} % Подпись листинга
 
 \includelisting
-{add-round-key.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая добавление ключа раунда к state} % Подпись листинга
-
-\clearpage
-
-\includelisting
-{sub-bytes.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая нелинейную замену байт в state с помощью sbox} % Подпись листинга
-
-\includelisting
-{shift-rows.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая циклический сдвиг строк state влево в зависимости от номера строки} % Подпись листинга
-
-\includelisting
-{mix-columns.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая процедуру MixColumns} % Подпись листинга
-
-%\includelisting
-%{f_part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация функции Фейстеля (начало)} % Подпись листинга
-%
-%\includelisting
-%{f_part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация функции Фейстеля (конец)} % Подпись листинга
-%
-%\includelisting
-%{pcbc.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования в режиме PCBC} % Подпись листинга
-%\clearpage
-%
-%В листинге \ref{lst:encrypt-char-by-code-impl.txt} представлена реализация алгоритма шифрования символа.
-%
-%\includelisting
-%{encrypt-char-by-code-impl.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования символа} % Подпись листинга
-%
-%В листинге \ref{lst:encrypt-impl.txt} представлена реализация алгоритма шифрования символа c использованием кодировщика.
-%
-%\includelisting
-%{encrypt-impl.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования символа с использованием кодировщика} % Подпись листинга
-%
-%В листингах \ref{lst:encrypt-string-impl-part1.txt}  и \ref{lst:encrypt-string-impl-part2.txt} представлена реализация шифрования строки.
-%
-%\includelisting
-%{encrypt-string-impl-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования строки (начало)} % Подпись листинга
-%
-%\includelisting
-%{encrypt-string-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования строки (конец)} % Подпись листинга
-%
-%В листингах \ref{lst:encrypt-file-impl-part1.txt}  и \ref{lst:encrypt-file-impl-part2.txt} представлена реализация шифрования произвольного файла.
-%
-%\includelisting
-%{encrypt-file-impl-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования произовльного файла (начало)} % Подпись листинга
-%
-%\includelisting
-%{encrypt-file-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация шифрования произовльного файла (конец)} % Подпись листинга
-%
-%%\includelisting
-%%{encrypt-string-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%%{Реализация шифрования строки (конец)} % Подпись листинга
-%
-%%В листингах \ref{lst:search-tree-part1.txt} и \ref{lst:search-tree-part2.txt} представлена реализация функции поиска в ДДП и АВЛ-дереве.
-%%
-%%\includelisting
-%%{search-tree-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%%{Реализация функции поиска в ДДП и АВЛ-дереве (начало)} % Подпись листинга
-%%
-%%\includelisting
-%%{search-tree-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%%{Реализация функции поиска в ДДП и АВЛ-дереве (конец)} % Подпись листинга
+{sha1-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функции хеширования алгоритмом SHA1 (конец)} % Подпись листинга
 
 \section*{Вывод}
 
