Экономика и ЗИ залутаны

--- a/eco/hw/report/03-introduction.tex
+++ b/eco/hw/report/03-introduction.tex
@@ -1,12 +1,18 @@
 \chapter*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{chapter}{ВВЕДЕНИЕ}
 
-Целью данной лабораторной работы является реализация программы создания и проверки электронной подписи для документа с использованием алгоритма RSA и алгоритма хеширования SHA1.
+Олигополия есть самый распространенный тип рыночной структуры в российской экономике \cite{info_oly}. Примерами могут выступать различные отрасли: нефтегазовый комплекс, где главными комнурентами выступают <<Газпром>>, <<Роснефть>> и <<Лукойл>>, рынок мобильной связи с ключевыми игроками в виде <<МТС>>, <<Мегафон>>, <<Билайн>> и <<Теле 2>>, рынок маркетплейсов, где доминируют <<Озон>> и <<Wildberries>>.
 
-Для достижения поставленной цели необходимо решить следующие задачи:
+На международном рынке также можно выделить множество примеров олигополии: рынок игровых консолей, где <<PlayStation>>, <<Xbox>>, <<Nintendo>> занимают лидирующие позиции, авиационная промыщленность, представленная компаниями <<Boeing>> и <<Airbus>>, чьи самолеты занимают большую часть в авиапарках мира, рынок производителей процессоров для персональных компьютеров, где <<Intel>> и <<AMD>> занимают лидирующие позиции \cite{info_oly2}.
 
-\begin{enumerate}[label={\arabic*)}]
-	\item описать алгоритмы RSA и SHA1;
-	\item выбрать средства программной реализации;
-	\item реализовать данные алгоритмы.
+Учитывая популярность данного типа рыночной структуры, необходимо понимать, что он из себя представляет.
+
+Целью данной работы является раскрытие понятия <<Олигополия>> и описание ее основных моделей. 
+
+Для достижения поставленной цели необходимо решить следующие задачи: 
+
+\begin{enumerate}
+	\item описать термин <<Олигополия>>;
+	\item описать модели олигополии;
+	\item составить кроссворд.
 \end{enumerate}
