--- a/eco/hw/report/08-conclusion.tex
+++ b/eco/hw/report/08-conclusion.tex
@@ -1,12 +1,12 @@
 \chapter*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{chapter}{ЗАКЛЮЧЕНИЕ}
 
-В ходе выполнения лабораторной работы были решены следующие задачи:
+В ходе выполнения домашнего задания были решены следующие задачи:
 
-\begin{enumerate}[label={\arabic*)}]
-	\item описаны алгоритмы RSA и SHA1;
-	\item выбраны средства программной реализации;
-	\item реализованы данные алгоритмы.
+\begin{enumerate}
+	\item описан термин <<Олигополия>>;
+	\item описаны модели олигополии;
+	\item составлен кроссворд.
 \end{enumerate}
 
-Цель работы, а именно реализация программы создания и проверки электронной подписи для документа с использованием алгоритма RSA и алгоритма хеширования SHA1, также была достигнута.
+Цель работы, а именно раскрытие понятия <<Олигополия>> и описание ее основных моделей, также была достигнута.
