--- a/eco/hw/report/biblio.bib
+++ b/eco/hw/report/biblio.bib
@@ -1,22 +1,23 @@
-@BOOK{info_book_bst,
-	author = "О. В. Сенюкова",
-	title = "Сбалансированные деревья поиска",
+@BOOK{info_oly3,
+	author = "В. Д. Кадамаев, М. З. Ильчиков, Т. А. Борисовская",
+	title = "Экономическая теория. Краткий курс: учебник",
 	address = "М.",
-	publisher = "Издательский отдел факультета ВМиК МГУ имени М.В. Ломоносова",
-	year = 2014,
-	numpages = 68,
+	publisher = "КНОРУС",
+	year = 2023,
+	numpages = 382,
 	language = "russian"
 }
 
-@misc{info_DES,
-	title="DES [Электронный ресурс].",
-	howpublished="Режим доступа: \url{https://ru.wikipedia.org/wiki/DES} (дата обращения: 15.10.2024)."
+
+@misc{info_oly,
+	title="Модели олигополии и их проявление в современной экономике России [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://elibrary.ru/download/elibrary_43986886_67315347.pdf} (дата обращения: 16.12.2024)."
 }
 
 
-@misc{pl,
-	title="Справочник по языку C++ [Электронный ресурс].",
-	howpublished="Режим доступа: \url{https://learn.microsoft.com/ru-ru/cpp/cpp/cpp-language-reference?view=msvc-170} (дата обращения: 28.09.2022)."
+@misc{info_oly2,
+	title="Стратегии ценообразования на олигополистических рынках в цифровую эпоху [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://innova-science.ru/wp-content/uploads/2024/07} (дата обращения: 16.12.2024)."
 }
 
 @misc{cpu_time_func,
