--- a/info_sec/labs/lab_05/report/03-introduction.tex
+++ b/info_sec/labs/lab_05/report/03-introduction.tex
@@ -1,12 +1,12 @@
 \chapter*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{chapter}{ВВЕДЕНИЕ}
 
-Целью данной лабораторной работы является реализация программы создания и проверки электронной подписи для документа с использованием алгоритма RSA и алгоритма хеширования SHA1.
+Целью данной лабораторной работы является реализация программы сжатия документа.
 
 Для достижения поставленной цели необходимо решить следующие задачи:
 
 \begin{enumerate}[label={\arabic*)}]
-	\item описать алгоритмы RSA и SHA1;
+	\item описать алгоритм LZW;
 	\item выбрать средства программной реализации;
-	\item реализовать данные алгоритмы.
+	\item реализовать данный алгоритм.
 \end{enumerate}
