--- a/info_sec/labs/lab_05/report/08-conclusion.tex
+++ b/info_sec/labs/lab_05/report/08-conclusion.tex
@@ -4,9 +4,9 @@
 В ходе выполнения лабораторной работы были решены следующие задачи:
 
 \begin{enumerate}[label={\arabic*)}]
-	\item описаны алгоритмы RSA и SHA1;
+	\item описан алгоритм LZW;
 	\item выбраны средства программной реализации;
-	\item реализованы данные алгоритмы.
+	\item реализован данный алгоритм.
 \end{enumerate}
 
-Цель работы, а именно реализация программы создания и проверки электронной подписи для документа с использованием алгоритма RSA и алгоритма хеширования SHA1, также была достигнута.
+Цель работы, а именно реализация программы сжатия документа, также была достигнута.
