--- a/eco/hw/report/05-design.tex
+++ b/eco/hw/report/05-design.tex
@@ -1,40 +1,34 @@
-\chapter{Конструкторский раздел}
-
-На рисунках \ref{img:rsa-}-\ref{img:sha1-iter} представлены схемы алгоритма RSA и SHA1.
+\chapter{Практическая часть}
 
 \includeimage
-{rsa-} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.8\textwidth} % Ширина рисунка
-{Схема шифровального алгоритма RSA} % Подпись рисунка
+{empty-crossword.jpg}
+{f}
+{H}
+{0.8\textwidth}
+{Незаполненный кроссворд}
+
+\textbf{По горизонтали:}
+
+2. Вид олигополии когда на рынке представлены только два производителя конкретной продукции.
+4. Модель базирующаяся на том, что: две фирмы производят однородный товар, им известна кривая рыночного спроса, они принимают решения о производстве независимо друг от друга и одновременно.
+5. Для медленно растущих олигопольных рынков они очень высокие.
+7. Ценовое … -- одна из форм сознательного параллелизма.
+8. Олигополия, при котором фирмы согласуют своё поведение.
+10. Модель описывающая поведение фирм на олигополистическом рынке, конкурирующих за счет изменения(в основном снижения) уровня цен на свою продукцию.
+11. Вид олигополии при которой фирмы представляют схожие продукты, характеризующиеся обилием типов, сортов, размеров и т.д.
+12. Важное значение для сохранения картеля играют … между участниками.
+
+\textbf{По вертикали:}
+
+1. В честь этого экономиста названа степень влияния фирмы на рыночные цены.
+3. Рыночная структура, большая часть производства и продаж которой осуществляется небольшим числом сравнительно крупных предприятий.
+4. Группа олигополистов, договаривающихся об определенных принципах установления цен, распределения долей рынка.
+6. Олигополия, при котором фирмы действуют независимо.
+9. Модель этой кривой была разработана в 1939 г. экономистами Полем Свизи (суизи), Хэллом и Хитчем.
 
 \includeimage
-{rsa-work.png} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.7\textwidth} % Ширина рисунка
-{Схема шифровального алгоритма работы RSA} % Подпись рисунка
-
-\includeimage
-{sha-1.png} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.8\textwidth} % Ширина рисунка
-{Схема алгоритма SHA1} % Подпись рисунка
-
-\includeimage
-{sha1-iter.png} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{ht!} % Положение рисунка (см. figure из пакета float)
-{0.8\textwidth} % Ширина рисунка
-{Схема раунда алгоритма SHA1} % Подпись рисунка
-
-\section*{Вывод}
-
-В данном разделе были представлены схемы алгоритма RSA и SHA1.
-
-
-
-
-
+{fill-crossword.jpg}
+{f}
+{H}
+{0.8\textwidth}
+{Заполненный кроссворд}
