--- a/eco/hw/report/04-analysis.tex
+++ b/eco/hw/report/04-analysis.tex
@@ -1,138 +1,90 @@
-\chapter{Теоретическая часть}
+\chapter{Аналитическая часть}
 
-\section{Олигополия}
+В этом разделе будут рассмотрен криптографический алгоритм RSA, алгоритм хеширования SHA1 понятие электронной подписи и принципы её получения и проверки с использованием алгоритмов RSA, SHA1.
 
-Под термином <<Олигополия>> понимается тип рыночной структуры, при котором на рынке господствует несколько крупных фирм, каждая из которых способна оказывать влияние на рыночную цену своими собственными действиями \cite{info_oly3}. 
+\section{Электронная цифровая подпись}
 
-У олигополии выделяют следующие основные черты:
+Электронная цифровая подпись (ЭЦП) позволяет подтвердить авторство электронного документа.
 
-\begin{itemize}
-	\item \textbf{небольшое число фирм, господствующих на рынке.} Немногочисленность продавцов, которые действуют на рынке, отличительная особенность олигополии, но не стоит считать, что компании на рынке олигополии можно пересчитать по пальцам. В олигополистической отрасли наряду с крупными часто действует немало мелких фирм. Однако на несколько ведущих компаний приходится столь большая часть суммарного оборота отрасли, что именно их деятельность определяет развитие событий. К олигополистическим структурам экономисты обычно относят те рынки, где несколько крупнейших продавцов (в разных странах за точку отсчета принято от 3 до 8 фирм) производят более пятидесяти процентов всей выпускаемой продукции;
+Создание ЭЦП с использованием криптографического алгоритма RSA и алгоритма хеширования SHA1 происходит следующим образом:
+\begin{enumerate}[label=\arabic*)]
+	\item файл, который необходимо подписать, хешируется  при помощи SHA1;
+	\item полученный на предыдущем этапе хеш шифруется с использованием закрытого ключа RSA;
+	\item значение подписи --- результат шифрования.
+\end{enumerate}
+
+Проверка подлинности ЭЦП с использованием криптографического алгоритма RSA и алгоритма хеширования SHA1 происходит следующим образом:
+
+\begin{enumerate}[label=\arabic*)]
+	\item файл, который необходимо подписать, хешируется  при помощи SHA1;
+	\item переданная подпись расшифровывается с использованием открытого ключа RSA;
+	\item происходит побитовая сверка значений, полученных на предыдущих этапах, если они одинаковы, подпись считается подлинной.
+\end{enumerate}
+
+\section{Алгоритм RSA}
+
+RSA (аббревиатура от фамилий \textit{Rivest}, \textit{Shamir} и \textit{Adleman}) --- ассиметричный алгоритм с открытым ключом, основывающийся на вычислительной сложности задачи факторизации больших полупростых чисел. В алгоритме RSA используется 2 ключа --- открытый (публичный) и закрытый (приватный).
+
+В ассиметричной криптографии и алгоритме RSA, в частности, открытый и закрытый ключи являются двумя частями одного целого и неразрывны друг с другом. Для шифрования информации используется открытый ключ, а для её расшифровки закрытый.
+
+Криптосистема RSA стала первой системой, пригодной и для шифрования, и для цифровой подписи.
+
+Открытый и закрытый ключи RSA генерируются следующим образом:
+
+\begin{enumerate}[label=\arabic*)]
+	\item выбираются два разных случайных простых числа $p$ и $q$ заданного размера;
+	\item вычисляется их произведение $n = p \cdot q$, называемое модулем;
+	\item вычисляется значение функции Эйлера от числа $n$ по следующей формуле:
 	
-	\item \textbf{однородность и дифференцированность олигополии.} Олигополия может быть однородной и дифференцированной. Многие промышленные товары, сталь, цинк, медь, алюминий, цемент, технический спирт и др. -- являются стандартизированной продукцией и производятся на олигополизированных территориях. Многие отрасли промышленности производят товары народного потребления: автомобили, сигареты и т. д. производятся дифференцированными олигополиями;
+	$$\phi(n) = (p - 1)\cdot (q - 1)$$
 	
-	\item \textbf{ограничение доступа на рынок.} К естественным преградам относятся эффект масштаба, который может сделать не-прибыльным сосуществование многих фирм на рынке, так как для этого нужны большие финансовые средства (речь идет об естественной олигополии) и патентование и лицензирование производственных технологий. Вместе с тем фирмами могут быть предприняты и стратегические действия, затрудняющие вступление новых фирм в отрасль. Например, фирмы могут угрожать конкурентам, что пере-полнят рынок товарами и снизят тем самым цены. Но время от времени приток новых фирм все-таки происходит \cite{info_oly3};
-		
-	\item \textbf{влияние каждой фирмы на рыночную цену.} Поведение фирм на олигополистическом рынке подвержено двум противоположным тенденциям. Во-первых, взаимозависимость фирм может привести их к желанию вступить в сговор друг с другом. Во-вторых, эти фирмы будут стремиться конкурировать таким образом, чтобы получать именно в свое распоряжение максимальную долю отраслевой прибыли. При этом важно понимать, что эти две линии поведения несовместимы. Чем больше фирмы конкурируют друг с другом ради получения большей доли отраслевой прибыли, тем меньше становится общая величина этой прибыли;
+	\item выбирается целое число $e$ ($1 < e < \phi(n)$), взаимно простое со значением $\phi(n)$, называемое \textit{открытой экспонентой};
 	
-	\item \textbf{всеобщая взаимозависимость фирм.} Главная отличительная черта олигополии как специального типа строения рынка заключается во всеобщей взаимозависимости поведения предприятий-продавцов. Олигополист должен сделать (или принять) некоторые предположения о реакции своих соперников на принимаемые им решения, а также о реакции соперников на результаты своих решений. Зависимость
-	поведения каждой фирмы от реакции конкурентов называется \textbf{олигополистической взаимосвязью} \cite{info_oly3}.
-\end{itemize}
-
-\section{Основные модели олигополии}
-
-Общей модели поведения олигополиста при выборе оптимального объема производства, максимизирующего прибыль, не существует. 
-Так как выбор зависит от поведения фирмы в ответ на изменения действий конкурентов, то могут возникать различные ситуации. 
-В связи с этим различают следующие основные модели олигополии \cite{info_oly3}:
-
-\begin{itemize}
-	\item модель Курно;
-	\item олигополия, основанная на тайном сговоре;
+	\item вычисляется число $d$, называемое \textit{закрытой экспонентой} по следующей формуле:
 	
-	\clearpage
+	$$d  = e^{-1} mod (\phi(n))$$
 	
-	\item олигополия, не основанная на тайном сговоре (дилемма заключенного);
-	\item молчаливый сговор: лидерство в ценах.
-\end{itemize}
+	\item пара $(e, n)$ публикуются в качестве открытого ключа RSA;
+	\item пара $(d, n)$  представляет собой закрытый ключ RSA.
+\end{enumerate}
 
-\subsection{Модель Курно}
+Перевод исходного сообщения $m$ в зашифрованное сообщение $c$ производится по формуле
 
-Модель Курно (дуополии) была представлена в 1838 г. французским экономистом А.Курно. 
+ $$c = E(m, k_1) = E(m, n, e) = m^{e} mod (n)$$
 
-Дуополия -- это ситуация, когда на рынке конкурируют друг с другом только две фирмы. При
-построении этой модели предполагается, что фирмы производят однородный товар и что известна рыночная кривая спроса. Максимизирующий прибыль объем производства фирмы 1 ($Q_1$) изменяется в зависимости от того, как, по ее мнению, будет расти объем производства фирмы 2 ($Q_2$). В результате каждая фирма строит свою кривую реакции (рис \ref{img:kyrno.png}) \cite{info_oly3}.
+Расшифровка выполняется по формуле
+
+$$m = D(c, k_2) = D(c, n, d) = c^{d} mod (n)$$
 
 \includeimage
-{kyrno.png}
+{rsa}
 {f}
-{ht!}
+{ht!} 
 {0.8\textwidth}
-{Равновесие Курно}
+{RSA}
 
-Кривая реакции каждой фирмы говорит о том, сколько она будет производить при том или ином предполагаемом объеме производства своего конкурента. 
-При равновесии каждая фирма устанавливает объем производства в соответствии со своей кривой реакции. 
-Поэтому равновесный уровень объема производства находится на пересечении двух кривых реакции. 
-Это равновесие называется равновесием Курно. 
-При нем каждый дуополист устанавливает объем производства, который максимизирует его прибыль, при данном объеме производства своего конкурента. 
-Равновесие Курно является примером того, что в теории игр называется равновесием Нэша (когда каждый игрок делает наилучшее, что можно, при заданных действиях оппонентов, в итоге — ни у одного игрока нет стимула, чтобы изменить свое поведение) \cite{info_oly3}.
+\section{Алгоритм SHA1}
 
-\subsection{Олигополия, основанная на тайном сговоре}
+SHA1 (англ. \textit{Secure Hash Algorithm 1}) --- алгоритм криптографического хеширования. 
+Для входного сообщения произвольной длины алгоритм генерирует 160-битное (20 байт) хеш-значение, называемое также дайджестом сообщения, которое обычно отображается как шестнадцатеричное число длиной в 40 цифр.
 
-Тайный сговор -- это фактическое соглашение между фирмами в отрасли с целью установления фиксированных цен и объемов производства. 
-Такое соглашение называется картелем.
-Во многих странах тайный сговор считается незаконным, а в Японии, например, он получил
-большое распространение. 
-К факторам, способствующим тайному сговору, относятся \cite{info_oly3}: 
+Алгоритм состоит из следующих шагов:
 
-\begin{itemize}
-	\item наличие правовой базы;
-	\item высокая концентрация продавцов;
-	\item примерно одинаковые средние издержки у фирм в отрасли;
-	\item невозможность проникновения новых фирм на рынок.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{добавление недостающих битов}. Сообщение расширяется таким образом, чтобы его длина была кратна 448 по модулю 512 (длина $\equiv  448 \mod 512$). Добавление осуществляется всегда, даже если сообщение уже имеет нужную длину. Таким образом, число добавляемых битов находится в диапазоне от 1 до 512;
+	\item \textbf{расширение.} Результатом первых двух шагов является сообщение, длина которого кратна 512 битам. Расширенное сообщение может быть представлено как последовательность 512-битных блоков $Y_0, Y_1, . . . , Y_{L-1}$, так что общая длина расширенного сообщения есть $L * 512$ бит. Таким образом, результат кратен шестнадцати 32-битным словам.
+	\item \textbf{инициализация SHA-1 буфера.} Используется 160-битный буфер для хранения промежуточных и окончательных результатов хэш-функции. Буфер может быть представлен как пять 32-битных регистров A, B, C, D и E. Эти регистры инициализируются следующими шестнадцатеричными числами: A = 67452301, B = EFCDAB89, C = 98BADCFE, D = 10325476, E = C3D2E1F0.
+	\item \textbf{обработка сообщения в 512-битных (16-словных) блоках.} Основой алгоритма является модуль, состоящий из 80 циклических обработок, обозначенный как $H_{SHA}$. Все 80 циклических обработок имеют одинаковую структуру.
+	\item \textbf{выход.} После обработки всех 512-битных блоков выходом L-ой стадии является 160-битный дайджест сообщения.
+\end{enumerate}
 
-
-Предполагается, что при тайном сговоре каждая фирма будет выравнивать свои цены и при понижении, и при повышении цен. 
-При этом фирмы производят однородную продукцию и имеют одинаковые средние издержки. 
-Тогда при выборе оптимального объема производства, максимизирующего прибыль, олигополист ведет себя подобно чистому монополисту. 
-Если две фирмы сговорились, то они строят кривую контракта (рис \ref{img:kr-kontr.png}).
-
-\includeimage
-{kr-kontr.png}
+\includesvgimage
+{SHA-1}
 {f}
-{H}
-{0.8\textwidth}
-{Кривая контракта при тайном сговоре}
+{ht!} 
+{0.6\textwidth}
+{Одна итерация алгоритма SHA-1}
 
-Она показывает различные сочетания объемов производства двух фирм, которые максимизируют прибыль. 
-Тайный сговор значительно выгоднее для фирм, чем не только совершенное равновесие, но и равновесие Курно, так как они будут производить меньше продукции, а цену установят выше.
+\section*{Вывод} 
 
-\subsection{Олигополия, не основанная на тайном сговоре}
-
-Если же тайного сговора нет (а в большинстве стран он является незаконным), то олигополисты при установлении цены сталкиваются с дилеммой заключенных. 
-Это классический пример теории игр в экономике: двух заключенных обвинили в
-совместном совершении преступления. 
-Они находятся в отдельных тюремных камерах и не могут поддерживать связь друг с другом. 
-Если оба сознаются — каждый получит срок наказания в 5 лет. 
-Если оба не сознаются — дело не будет доведено до конца и каждый получит по 2 года. 
-Если один сознается, а другой нет — то первый получит 1 год наказания, а другой — 10 лет. Матрица возможных результатов (рис \ref{img:dil-zakl.png}) \cite{info_oly3}:
-
-\includeimage
-{dil-zakl.png}
-{f}
-{H}
-{0.8\textwidth}
-{Дилемма заключенного}
-
-Перед заключенными стоит дилемма: признаваться или не признаваться. 
-Если бы они могли договориться, чтобы не признаваться, они бы не признались и получили бы по 2 года наказания. 
-Но даже если бы такая возможность существовала, они не могут доверять друг другу. 
-Если  один не признается, то он рискует, что второй этим воспользуется. 
-Поэтому, чтобы ни делал первый, второму всегда выгоднее признаться. 
-Тогда, вероятнее всего, признаются оба и пойдут в тюрьму на 5 лет.
-
-Олигопольные фирмы часто сталкиваются с дилеммой заключенных. 
-Предположим, что две фирмы — единственные продавцы на рынке. 
-Они сталкиваются с дилеммой: какую цену установить: высокую или низкую? 
-Если договорятся и оба установят высокую цену, то получат по 20 млн руб., если установят оба относительно низкую цену — то по 15 млн руб., если одна из фирм установит высокую цену, а другая — низкую, то первая фирма получит 10 млн руб., а вторая — 30 (за счет первой), т. е. есть стремление к обману. 
-Матрица возможных результатов (рис \ref{img:dil-zakl2.png}) \cite{info_oly3}:
-
-\includeimage
-{dil-zakl2.png}
-{f}
-{H}
-{0.8\textwidth}
-{Дилемма заключенного для олигополий}
-
-Очевидно, что каждой фирме выгодно назначить относительно низкую цену, независимо от того, как поступит конкурент. 
-Поэтому фирмы назначат низкие цены и получат по 15 млн руб. 
-Дилемма заключенных объясняет жесткость цены при олигополии.
-
-
-\subsection{Молчаливый сговор: лидерство в ценах}
-
-Существует еще одна модель поведения олигополистов, основанная на молчаливом тайном соглашении: это <<лидерство в ценах>>, когда доминирующая на рынке фирма меняет цену,
-а все другие следуют этому изменению. 
-Ценовому лидеру с молчаливого согласия остальных отводится ведущая роль в установлении отраслевых цен. 
-Ценовой лидер может объявить об изменении цены, и, если его расчет верен, то остальные фирмы также увеличивают цены. 
-В результате отраслевая цена изменяется без тайного сговора \cite{info_oly3}. 
+В этом разделе был рассмотрен криптографический алгоритм RSA, алгоритм хеширования SHA1 понятие электронной подписи и принципы её получения и проверки с использованием алгоритмов RSA, SHA1.
