--- a/eco/hw/report/report.tex
+++ b/eco/hw/report/report.tex
@@ -10,12 +10,13 @@
 {Информатика и системы управления} % Название факультета
 {Программное обеспечение ЭВМ и информационные технологии}
 % Название кафедры
-{домашнему заданию} % Название работы (в дат. падеже)
-{Экономика часть 1} % Название курса (необязательный аргумент)
-{Олигополия и ее основные модели} % Тема работы
-{} % Номер варианта (необязательный аргумент)
+{лабораторной работа №4} % Название работы (в дат. падеже)
+{Защита информации} % Название курса (необязательный аргумент)
+{Электронная цифровая подпись. Алгоритм
+	RSA с хешированием SHA1 и MD5} % Тема работы
+{2} % Номер варианта (необязательный аргумент)
 {Лысцев~Н.~Д./ИУ7-73Б} % Номер группы
-{Кузнецов~А.~А.} % ФИО студента
+{Чиж~И.~С.} % ФИО студента
 {}
 
 \maketableofcontents
@@ -23,8 +24,8 @@
 \include{03-introduction}
 \include{04-analysis}
 \include{05-design}
-%\include{06-implementation}
-%%%\include{07-research}
+\include{06-implementation}
+%%\include{07-research}
 \include{08-conclusion}
 
 \makebibliography
