--- a/info_sec/labs/lab_05/report/06-implementation.tex
+++ b/info_sec/labs/lab_05/report/06-implementation.tex
@@ -6,10 +6,10 @@
 
 К программе предъявляется ряд требований:
 
-\begin{itemize}
-	\item программа должна предоставлять возможность сжатия и разжатия произвольного файла;
-	\item программа должна рассчитывать коэффициент сжатия;
+\begin{itemize} [label=--]
+	\item программа должна предоставлять возможность шифрования и расшифровки произвольного файла;
 	\item программа должна корректно работать с пустым однобайтовым файлом;
+	\item программа должна уметь обрабатывать файл архива.
 \end{itemize}
 
 \section{Средства реализации}
@@ -22,8 +22,8 @@
 
 \begin{itemize}
 	\item \texttt{main.cpp} --- файл, содержащий точку входа в программу;
-	\item \texttt{LZW.cpp} --- модуль, реализующий алгоритм LZW;
-	\item \texttt{TrieTree.cpp} --- модуль, реализующий префиксное дерево.
+	\item \texttt{SHA1.cpp} --- модуль, реализующий алгоритм SHA1;
+	\item \texttt{RSA.cpp} --- модуль, реализующий алгоритм RSA.
 \end{itemize}
 
 \section{Тестирование}
@@ -54,24 +54,31 @@
 
 \section{Реализации алгоритмов}
 
-На листинге \ref{lst:lzw-compress.txt} представлена функция, реализующая сжатие по алгоритму LZW.
+На листинге \ref{lst:rsa-gen-keys.txt} представлена функция, реализующая реализующая генерацию публичного и приватного RSA-ключа.
 
+На листинге \ref{lst:rsa-functions.txt} представлены функции создания подписи, создания прототипа сообщения и проверки подписи.
 
-\includelisting
-{lzw-compress.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая сжатие по алгоритму LZW} % Подпись листинга
-
-\clearpage
+На листингах \ref{lst:sha1-part1.txt}-\ref{lst:sha1-part2.txt} представлена функция хеширования алгоритмом SHA1.
 
 \includelisting
-{lzw-decompress-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая разжатие по алгоритму LZW (начало)} % Подпись листинга
+{rsa-gen-keys.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая генерацию публичного и приватного RSA-ключа} % Подпись листинга
 
 \clearpage 
 
 \includelisting
-{lzw-decompress-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая разжатие по алгоритму LZW (конец)} % Подпись листинга
+{rsa-functions.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функции создания подписи, создания прототипа сообщения и проверки подписи} % Подпись листинга
+
+\clearpage
+
+\includelisting
+{sha1-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функции хеширования алгоритмом SHA1 (начало)} % Подпись листинга
+
+\includelisting
+{sha1-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функции хеширования алгоритмом SHA1 (конец)} % Подпись листинга
 
 \section*{Вывод}
 
