--- a/info_sec/labs/lab_05/report/report.tex
+++ b/info_sec/labs/lab_05/report/report.tex
@@ -10,10 +10,11 @@
 {Информатика и системы управления} % Название факультета
 {Программное обеспечение ЭВМ и информационные технологии}
 % Название кафедры
-{лабораторной работа №5} % Название работы (в дат. падеже)
+{лабораторной работа №4} % Название работы (в дат. падеже)
 {Защита информации} % Название курса (необязательный аргумент)
-{Алгоритм сжатия LZW} % Тема работы
-{1} % Номер варианта (необязательный аргумент)
+{Электронная цифровая подпись. Алгоритм
+	RSA с хешированием SHA1 и MD5} % Тема работы
+{2} % Номер варианта (необязательный аргумент)
 {Лысцев~Н.~Д./ИУ7-73Б} % Номер группы
 {Чиж~И.~С.} % ФИО студента
 {}
@@ -24,7 +25,7 @@
 \include{04-analysis}
 \include{05-design}
 \include{06-implementation}
-%\include{07-research}
+%%\include{07-research}
 \include{08-conclusion}
 
 \makebibliography
