--- a/info_sec/labs/lab_05/report/report.tex
+++ b/info_sec/labs/lab_05/report/report.tex
@@ -23,10 +23,10 @@
 
 \include{03-introduction}
 \include{04-analysis}
-\include{05-design}
+%\include{05-design}
 \include{06-implementation}
-%%\include{07-research}
-\include{08-conclusion}
+%%%\include{07-research}
+%\include{08-conclusion}
 
 \makebibliography
 
